use jar from maven for BCrypt